After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 733241 - service introspection doesn't list actions with no arguments
service introspection doesn't list actions with no arguments
Status: RESOLVED FIXED
Product: GUPnP
Classification: Other
Component: gupnp
0.20.x
Other Linux
: Normal normal
: ---
Assigned To: GUPnP Maintainers
GUPnP Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-07-16 09:28 UTC by etienne.peron
Modified: 2014-07-18 19:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed patch (1.52 KB, patch)
2014-07-16 09:32 UTC, etienne.peron
committed Details | Review

Description etienne.peron 2014-07-16 09:28:11 UTC
In the service introspection module, if an action has no input and output argument it is not listed in the actions list. The UPnP specification states that "Each action MAY have >= 0 parameters."
Comment 1 etienne.peron 2014-07-16 09:32:47 UTC
Created attachment 280783 [details] [review]
proposed patch
Comment 2 Jens Georg 2014-07-16 10:18:10 UTC
Review of attachment 280783 [details] [review]:

I'd like to have a deeper look on what implications action_info->arguments being NULL might have, bug generally +1