Allow actions without arguments

https://bugzilla.gnome.org/show_bug.cgi?id=733241